@@ -15,6 +15,8 @@ Version 1.3.0-dev
   * Add Content-Disposition to the headers if the result contains a filename
   * Add support for sending headers through JS ZOO-api
   * Add support for multi-valued inputs in JS ZOO-api
+  * Fixing issue about invalid status document #73
+  * Add Python-3.3.0 support
 
 Version 1.2.0-rc3
 
